samples/_failures_safe/1761626748_3db0b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3ca5287f.c: In function ‘main’:
./samples/SAFE/__tmp_3ca5287f.c:161:9: error: expected declaration or statement at end of input
  161 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_3ca5287f.c:161:9: error: expected declaration or statement at end of input
